--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.15.2",
+    "console-stamp": "^0.2.4",
     "express": "^4.14.0",
     "mysql": "^2.12.0",
     "pug": "^2.0.0-beta6"
