--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.2",
     "console-stamp": "^0.2.4",
     "express": "^4.14.0",
+    "morgan": "^1.7.0",
     "mysql": "^2.12.0",
     "pug": "^2.0.0-beta6"
   }
