--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "erle",
   "private": true,
   "dependencies": {
-    "basic-auth": "^1.1.0",
     "body-parser": "^1.15.2",
+    "connect-ensure-login": "^0.1.1",
     "console-stamp": "^0.2.4",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "morgan": "^1.7.0",
     "mysql": "^2.12.0",
-    "pug": "^2.0.0-beta6"
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "pug": "^2.0.0-beta6",
+    "serve-favicon": "^2.3.2"
   }
 }
