--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
     "connect-ensure-login": "^0.1.1",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
